# borderless_agent

./: .env.example  .gitignore  README.md  config.py  context_core.py  llm_protocol.py  loop_core.py  memory_core.py  package-lock.json  package.json  session_core.py  skills_core.py  todo_core.py  tools_core.py  vitest.config.ts
TypeScript/: .env.example  README.md  package-lock.json  package.json
cli/: __init__.py  __main__.py  main.py
docs/: AGENT_LOOP_AND_HARNESS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  CONTEXT_MANAGEMENT.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_SUGGESTIONS.md  MEMORY_PRD.md  PROGRESSIVE_DISCLOSURE.md  README.md  UNIVERSAL_AGENT_REFACTORING.md
python/: README.md  __init__.py  agent_builder.py  agent_instance.py  agent_types.py  agents_core.py  autonomous_loop.py  config.py  human_loop.py  llm_protocol.py  loop_core.py  main.py  mcp_client.py  pyproject.toml  requirements.txt  sandbox.py  session_core.py  tools_core.py
python/server/: __init__.py  __main__.py  app.py
python/storage/: cloud_backend.py  file_backend.py
python/tests/: test_integration.py  test_server.py  test_tools.py
scripts/: release.sh  tsv_to_md_table.py
server/: app.py
src/: agentBuilder.ts  agentInstance.ts  config.ts  contextBuilder.ts  contextCore.ts  errors.ts  guardrails.ts  harness.ts  index.ts  llmProtocol.ts  loopCore.ts  main.ts  mcpClient.ts  memoryCore.ts  metrics.ts  pricing.ts  skillLifecycle.ts  skillRegistry.ts  telemetry.ts  todoCore.ts  toolExecutor.ts  types.ts
storage/: __init__.py  protocols.py
tests/: test_context.py  test_integration.py  (+2 more)
(+57 files in other folders)
