[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-system"
version = "0.0.1"
description = "Portable agentic AI framework — build agents with custom tools, skills, and system prompts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agent", "ai", "llm", "openai", "tools", "skills"]
dependencies = [
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
cloud = ["boto3>=1.34.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*"]
